<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/todobg"
    tools:context=".AboutActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aboutText"
        android:text="@string/about_us"
        android:textColor="@color/lapis"
        android:textSize="35sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aboutApp"
        android:layout_below="@id/aboutText"
        android:text="@string/about_app"
        android:textColor="@color/lapis"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"
        android:textColorHighlight="@color/white"
        android:background="@drawable/rounded_background"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aboutApp2"
        android:layout_below="@id/aboutApp"
        android:text="@string/about_app2"
        android:textColor="@color/lapis"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"
        android:textColorHighlight="@color/white"
        android:background="@drawable/rounded_background"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aboutApp3"
        android:layout_below="@id/aboutApp2"
        android:text="@string/about_app3"
        android:textColor="@color/lapis"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"
        android:textColorHighlight="@color/white"
        android:background="@drawable/rounded_background"
        />


</RelativeLayout>