<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/todobg"
    tools:context=".HelpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/helpText"
        android:text="Help"
        android:textColor="@color/lapis"
        android:textSize="35sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:layout_centerHorizontal="true"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/helpApp1"
        android:layout_below="@id/helpText"
        android:text="@string/edit_help"
        android:textColor="@color/lapis"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"
        android:textColorHighlight="@color/white"
        android:background="@drawable/rounded_background"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/helpApp2"
        android:layout_below="@id/helpApp1"
        android:text="@string/delete_help"
        android:textColor="@color/lapis"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:textColorHighlight="@color/white"
        android:background="@drawable/rounded_background"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/helpApp3"
        android:layout_below="@id/helpApp2"
        android:text="@string/email_help"
        android:textColor="@color/lapis"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColorHighlight="@color/white"
        android:background="@drawable/rounded_background"
        />

</RelativeLayout>